--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -68,6 +68,9 @@
 
         <a th:href = "@{/students/{id}(id=${student.id})}"
            class = "btn btn-danger">Delete</a>
+
+        <a th:href = "@{/students/view/{id}(id=${student.id})}"
+           class = "btn btn-info">View</a>
       </td>
     </tr>
     </tbody>
