--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -34,7 +34,7 @@
                     Create New Student
                 </h1>
                 <div class="card-body">
-                    <form th:action="@{/students}" th:object = "${student}" method="POST">
+                    <form th:action="@{/students}" th:object = "${murid}" method="POST">
 
                         <div class="form-group">
                             <label> Student First Name</label>
